--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -4,10 +4,10 @@
 }
 
 .catalog__cards-item {
-  margin-top: 30px;
+  margin-top: 31px;
 
   &:first-child {
-    padding-top: 0;
+    margin-top: 0;
   }
 }
 
@@ -22,13 +22,13 @@
 }
 
 .catalog__card-info-wrap {
-  padding: 28px;
+  padding: 25px 26px 26px 27px;
 
   border: 1px solid #ececec;
 }
 
 .catalog__title {
-  margin-bottom: 6px;
+  margin-bottom: 4px;
 }
 
 .catalog__title-link {
@@ -47,7 +47,7 @@
 }
 
 .catalog__description {
-  margin-bottom: 18px;
+  margin-bottom: 19px;
 
   font-size: 13px;
   line-height: 30px;
